<resources>
    <string name="app_name">YOHONow</string>
    <string name="home_main">推荐</string>
    <string name="column_main">栏目</string>
    <string name="community_main">社区</string>
    <string name="video_main">视频</string>
    <string name="magazine_main">杂志</string>
    <string name="yi_shu">|</string>
    <string name="yoho_boy">YOHO!BOY</string>
    <string name="yoho_girl">YOHO!GIRL</string>
    <string name="special">SPECIAL</string>
    <string name="more">More ></string>
    <string name="wallpaper_xing">*</string>
    <string name="draw_layout_feedback">意见反馈</string>
    <string name="draw_layout_comment">给我评价</string>
    <string name="draw_layout_setting">设置</string>
    <string name="draw_layout_denglu">登录</string>
    <string name="draw_layout_my_shou_cang">我的收藏</string>
    <string name="draw_layout_my_magazine">我的杂志</string>
    <string name="draw_layout_my_question">我的问题</string>
    <string name="huiKan">回看</string>
    <string name="geng_xin_go">更新至</string>
    <string name="pian">篇</string>
    <string name="jingHao">#</string>
    <string name="head_question">提问 :</string>
    <string name="head_answer">解答 :</string>
    <string name="qing_denglu">请登录</string>
    <string name="community_fragment_zhiding">置顶</string>
    <string name="proint_magazine">·杂志</string>
    <string name="point_magazine">·杂志</string>
    <string name="log_in_text">Yoho!Family账号可登录Yoho!Now</string>
    <string name="phone_number">手机号/邮箱</string>
    <string name="password">密码</string>
    <string name="password_forget">忘记密码</string>
    <string name="international">international Customer</string>
    <string name="register"><![CDATA[< 注册Yoho!Family]]></string>
    <string name="pleaseEnterASearchKeyword">请输入搜索关键字</string>
    <string name="yohoFamily">注册Yoho!Family</string>
    <string name="YohoFamily">YoHo!Family</string>
    <string name="YohoFamilyPop">Yoho1Family账号可登录YohoBuy!有货、Yoho!Now及SHOW</string>
    <string name="sure">确定</string>
    <string name="country">国家和地区</string>
    <string name="china">中国</string>
    <string name="addEightSix">+86</string>
    <string name="phone">手机号</string>
    <string name="next">下一步</string>
    <string name="download">立即下载</string>
    <string name="cancel">取消</string>
    <string name="phone_get_password">通过手机找回密码</string>
    <string name="mailbox_password">通过邮箱找回密码</string>
    <string name="chose">选择</string>
    <string name="write_a_comment">写评论...</string>
    <string name="edit">编辑</string>
    <string name="eight">8</string>
    <string name="add">+</string>
    <string name="ninety_nine">99</string>
    <string name="fiften">15</string>
    <string name="fifteen">15</string>
    <string name="zero">(0)</string>

</resources>
