<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:id="@+id/draw_layout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fm_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_zero"
            android:layout_weight="1"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/magin_fifty"
            android:background="@color/colorBlack"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_footer_home_main"
                style="@style/radioButton"
                android:checked="true"
                android:drawableTop="@drawable/footer_home"
                android:text="@string/home_main"
                android:textColor="@drawable/text_check_color"/>

            <RadioButton
                android:id="@+id/rb_footer_column_main"
                style="@style/radioButton"
                android:drawableTop="@drawable/footer_column"
                android:text="@string/column_main"
                android:textColor="@drawable/text_check_color"/>

            <RadioButton
                android:id="@+id/rb_footer_community_main"
                style="@style/radioButton"
                android:drawableTop="@drawable/footer_community"
                android:text="@string/community_main"
                android:textColor="@drawable/text_check_color"/>

            <RadioButton
                android:id="@+id/rb_footer_video_main"
                style="@style/radioButton"
                android:drawableTop="@drawable/footer_video"
                android:text="@string/video_main"
                android:textColor="@drawable/text_check_color"/>

            <RadioButton
                android:id="@+id/rb_footer_magazine_main"
                style="@style/radioButton"
                android:drawableTop="@drawable/footer_magazine"
                android:text="@string/magazine_main"
                android:textColor="@drawable/text_check_color"/>
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/colorBlack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_draw_layout_default_head"
                android:layout_width="@dimen/magin_eighty"
                android:layout_height="@dimen/magin_eighty"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/magin_one_hundred"
                android:scaleType="fitXY"
                android:src="@mipmap/default_head"/>

            <TextView
                android:id="@+id/tv_draw_layout_deng_lu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/magin_fifteen"
                android:text="@string/draw_layout_denglu"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/tv_draw_layout_shou_cang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/magin_forty"
                android:text="@string/draw_layout_my_shou_cang"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/tv_draw_layout_magazine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/magin_thirty"
                android:text="@string/draw_layout_my_magazine"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/tv_draw_layout_my_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/magin_thirty"
                android:text="@string/draw_layout_my_question"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/magin_forty"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feedback_main_draw_layout"
                android:layout_width="@dimen/activity_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/menu_feedback"
                android:gravity="center"
                android:text="@string/draw_layout_feedback"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/comment_main_draw_layout"
                android:layout_width="@dimen/activity_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/menu_comment"
                android:gravity="center"
                android:text="@string/draw_layout_comment"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/setting_main_draw_layout"
                android:layout_width="@dimen/activity_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/menu_setting"
                android:gravity="center"
                android:text="@string/draw_layout_setting"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>

