<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorWhite"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/magin_forty"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/iv_ic_share_activity_column_webview_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/magin_twenty"
            android:src="@mipmap/ic_share"/>

        <ImageView
            android:id="@+id/iv_menu_back_activity_column_webview_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/magin_twenty"
            android:src="@mipmap/menu_back_n"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/yoho_logo"
            />
    </RelativeLayout>

    <WebView
        android:id="@+id/webview_activity_column_webview_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_zero"
        android:layout_weight="1">

    </WebView>
    <!--写评论, 收藏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/magin_forty"
        android:layout_marginLeft="@dimen/padding_ten"
        android:layout_marginRight="@dimen/padding_five"
        android:background="@color/colorWhite"
        android:orientation="horizontal">
        <!--写评论-->
        <EditText
            android:id="@+id/edt_write_comment_activity_column_detail"
            android:layout_width="@dimen/activity_zero"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_five"
            android:layout_weight="5"
            android:background="@drawable/border"
            android:hint="@string/write_a_comment"/>
        <!--评论-->
        <LinearLayout
            android:layout_width="@dimen/activity_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_comment_b_activity_column_webview_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_ten"
                android:src="@mipmap/comment_b"/>
            <!--数量-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/activity_zero"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/activity_zero"
                    android:layout_weight="1"
                    android:text="@string/eight"/>
            </LinearLayout>
        </LinearLayout>
        <!--收藏-->
        <LinearLayout
            android:layout_width="@dimen/activity_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_love_b_activity_column_webview_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_five"/>

            <!--<ImageView-->
                <!--android:id="@+id/iv_love_b_s_activity_column_webview_detail"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginLeft="@dimen/padding_ten"-->
                <!--android:src="@mipmap/love_b_s"-->
                <!--android:visibility="gone"/>-->
            <!--收藏数量-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/activity_zero"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/activity_zero"
                    android:layout_weight="1"
                    android:text="@string/fifteen"
                    android:id="@+id/tv_activity_column_webview_detail"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>